<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/headerLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10dp"
                android:padding="@dimen/padding_10dp"
                android:text="h"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size_arrow"
                android:textStyle="bold" />

            <com.app.bitcoinvault.util.RobotoItalic
                android:id="@+id/walletName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_10dp"
                android:layout_toLeftOf="@+id/optionMenu"
                android:layout_toRightOf="@+id/backArrow"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:padding="@dimen/padding_10dp"
                android:text="@string/my_wallet"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size" />

            <TextView
                android:id="@+id/optionMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/padding_10dp"
                android:padding="@dimen/padding_10dp"
                android:text="c"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size_arrow"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.app.bitcoinvault.util.RobotoLightItalic
                android:id="@+id/availabltBits"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/padding_10dp"
                android:text="@string/available_bits"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <com.app.bitcoinvault.util.BitVaultFont
                        android:id="@+id/bitcoinIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/size_3"
                        android:text="b"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_22" />

                    <com.app.bitcoinvault.util.RobotoLightItalic
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_amount"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_50" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeBottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="bottom">

                    <TextView
                        android:id="@+id/dollarIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/size_3"
                        android:text="$"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_15" />

                    <com.app.bitcoinvault.util.RobotoLightItalic
                        android:id="@+id/amountDollar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/dollarIcon"
                        android:text="@string/dummy_amount_dollar"
                        android:textColor="@color/white"
                        android:textSize="@dimen/amount_text_sixe" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/sendSpinnerLay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical|right"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/sendSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/padding_10dp"
                    android:backgroundTint="@color/white"
                    android:dropDownVerticalOffset="25dp"
                    android:gravity="right"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/sendFontColor"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>